fix(cms): try different rewrites for vercel

--- a/cms/package.json
+++ b/cms/package.json
@@ -8,7 +8,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "sanity start --port=3002",
-    "build": "sanity build -y"
+    "build": "sanity build -y",
+    "test-build": "sanity build -y --no-minify"
   },
   "keywords": [
     "sanity",
