--- a/cms/vercel.json
+++ b/cms/vercel.json
@@ -1,5 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
-  "rewrites": [{ "source": "/studio/(.*)", "destination": "/index.html" }]
+  "rewrites": [{ "source": "/studio/:match*", "destination": "/:match*" }]
 }
