chore(blog): remove blog app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.formatOnSave": true,
-  "eslint.workingDirectories": ["web", "blog", "cms"]
+  "eslint.workingDirectories": ["web", "cms"]
 }
