--- a/web/package.json
+++ b/web/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "classnames": "^2.3.1",
     "next": "12.2.0",
+    "next-sitemap": "^3.1.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
