--- a/web/package.json
+++ b/web/package.json
@@ -15,12 +15,14 @@
     "next": "12.2.0",
     "next-sitemap": "^3.1.10",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-burger-menu": "^2.8.3",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0",
