feat(web): fetch CMS data to display posts

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,12 @@
       "outputs": ["dist/**", ".next/**"]
     },
     "web#build": {
-      "dependsOn": ["^build", "$CMS_URL"],
+      "dependsOn": [
+        "^build",
+        "$CMS_URL",
+        "$NEXT_PUBLIC_SANITY_PROJECT_ID",
+        "$NEXT_PUBLIC_SANITY_DATASET"
+      ],
       "outputs": [".next/**"]
     },
     "lint": {
