--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^1.0.6",
+    "@sanity/image-url": "^1.0.1",
     "classnames": "^2.3.1",
     "next": "12.2.0",
+    "next-sanity": "^0.6.0",
     "next-sitemap": "^3.1.10",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.8",
@@ -21,8 +24,8 @@
   "devDependencies": {
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
     "@types/react-burger-menu": "^2.8.3",
+    "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0",
