chore(web): add .env.production & add GraphQL URI

--- a/turbo.json
+++ b/turbo.json
@@ -8,9 +8,11 @@
     "web#build": {
       "dependsOn": [
         "^build",
+        "$SITE_URL",
         "$CMS_URL",
         "$NEXT_PUBLIC_SANITY_PROJECT_ID",
-        "$NEXT_PUBLIC_SANITY_DATASET"
+        "$NEXT_PUBLIC_SANITY_DATASET",
+        "$NEXT_PUBLIC_SANITY_GRAPHQL_URI"
       ],
       "outputs": [".next/**"]
     },
