--- a/web/.env.development
+++ b/web/.env.development
@@ -1,3 +1,5 @@
+CMS_URL="http://localhost:3002"
+SITE_URL="http://localhost:3000"
 NEXT_PUBLIC_SANITY_PROJECT_ID="arjjm1dn"
 NEXT_PUBLIC_SANITY_DATASET="staging"
-CMS_URL="http://localhost:3002"
+NEXT_PUBLIC_SANITY_GRAPHQL_URI="https://arjjm1dn.api.sanity.io/v1/graphql/staging/default"
