--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
     "classnames": "^2.3.1",
+    "graphql": "^16.5.0",
     "next": "12.2.0",
     "next-sanity": "^0.6.0",
     "next-sitemap": "^3.1.10",
