--- a/web/package.json
+++ b/web/package.json
@@ -15,13 +15,15 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "next": "12.2.0",
     "next-sanity": "^0.6.0",
     "next-sitemap": "^3.1.10",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.8",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.0.2",
