--- a/web/.env.production
+++ b/web/.env.production
@@ -1,5 +1,5 @@
 CMS_URL="https://cms.fhfhockey.com"
-SITE_URL="https://fhfhockey.com"
+NEXT_PUBLIC_SITE_URL="https://fhfhockey.com"
 NEXT_PUBLIC_SANITY_PROJECT_ID="arjjm1dn"
 NEXT_PUBLIC_SANITY_DATASET="production"
 NEXT_PUBLIC_SANITY_GRAPHQL_URI="https://arjjm1dn.api.sanity.io/v1/graphql/production/default"
