--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.5.0",
     "next": "12.2.0",
     "next-sanity": "^0.6.0",
+    "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.8",
