--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.6.9",
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
+    "chart.js": "^3.8.2",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
@@ -23,6 +24,7 @@
     "next-sitemap": "^3.1.10",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.8",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "yup": "^0.32.11"
   },
