--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
+    "jsdom": "^20.0.0",
     "next": "12.2.0",
     "next-sanity": "^0.6.0",
     "next-seo": "^5.5.0",
@@ -29,6 +30,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
     "@types/react-burger-menu": "^2.8.3",
