--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,9 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
     "chart.js": "^3.8.2",
+    "chartjs-adapter-date-fns": "^2.0.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.1",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "jsdom": "^20.0.0",
