--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.2",
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
     "chart.js": "^3.8.2",
