chore(web): improve /toi res time

--- a/web/package.json
+++ b/web/package.json
@@ -24,10 +24,12 @@
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "jsdom": "^20.0.0",
+    "memory-cache": "^0.2.0",
     "next": "12.2.0",
     "next-sanity": "^0.6.0",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
+    "node-html-parser": "^5.3.3",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-chartjs-2": "^4.3.1",
