feat(web): use a proxy server to display non-ssl image

--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,7 @@
         "$NEXT_PUBLIC_SANITY_PROJECT_ID",
         "$NEXT_PUBLIC_SANITY_DATASET",
         "$NEXT_PUBLIC_SANITY_GRAPHQL_URI",
+        "$NEXT_PUBLIC_PROXY_SERVER_URL",
         "$SANITY_API_TOKEN"
       ],
       "outputs": [".next/**"]
