--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
+    "fscreen": "^1.2.0",
     "graphql": "^16.5.0",
     "jsdom": "^20.0.0",
     "memory-cache": "^0.2.0",
