--- a/web/package.json
+++ b/web/package.json
@@ -22,8 +22,8 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
-    "fscreen": "^1.2.0",
     "graphql": "^16.5.0",
+    "html-to-image": "^1.10.8",
     "jsdom": "^20.0.0",
     "memory-cache": "^0.2.0",
     "next": "12.2.0",
