--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "workspaces": [
     "web",
-    "cms"
+    "cms",
+    "functions"
   ],
   "scripts": {
     "build": "turbo run build",
