--- a/web/.env.development
+++ b/web/.env.development
@@ -3,3 +3,4 @@ NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 NEXT_PUBLIC_SANITY_PROJECT_ID="arjjm1dn"
 NEXT_PUBLIC_SANITY_DATASET="staging"
 NEXT_PUBLIC_SANITY_GRAPHQL_URI="https://arjjm1dn.api.sanity.io/v1/graphql/staging/default"
+NEXT_PUBLIC_SERVERLESS_API_URL="http://localhost:3003"
