fix(functions): add missing dependencies

--- a/web/.env.production
+++ b/web/.env.production
@@ -3,3 +3,4 @@ NEXT_PUBLIC_SITE_URL="https://fhfhockey.com"
 NEXT_PUBLIC_SANITY_PROJECT_ID="arjjm1dn"
 NEXT_PUBLIC_SANITY_DATASET="production"
 NEXT_PUBLIC_SANITY_GRAPHQL_URI="https://arjjm1dn.api.sanity.io/v1/graphql/production/default"
+NEXT_PUBLIC_SERVERLESS_API_URL="https://functions-fhfhockey.vercel.app"
