--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@portabletext/react": "^1.0.6",
     "@react-spring/web": "^9.5.5",
     "@sanity/image-url": "^1.0.1",
+    "@supabase/supabase-js": "^1.35.7",
     "chart.js": "^3.8.2",
     "chartjs-adapter-date-fns": "^2.0.0",
     "classnames": "^2.3.1",
