--- a/web/package.json
+++ b/web/package.json
@@ -28,13 +28,12 @@
     "html-to-image": "^1.10.8",
     "jsdom": "^20.0.0",
     "memory-cache": "^0.2.0",
-    "next": "12.2.0",
+    "next": "^12.3.1",
     "next-sanity": "^0.6.0",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
     "node-html-parser": "^5.3.3",
     "react": "18.2.0",
-    "react-burger-menu": "^3.0.8",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "yup": "^0.32.11"
@@ -43,7 +42,6 @@
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
-    "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
