feat(web): add line combo edit page

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Athanasiou", "defensemen", "FHFH"]
+  "cSpell.words": ["Athanasiou", "defensemen", "FHFH", "Immer", "Postgrest"]
 }
