--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "html-to-image": "^1.10.8",
+    "immer": "^9.0.15",
     "jsdom": "^20.0.0",
     "memory-cache": "^0.2.0",
     "next": "^12.3.1",
@@ -36,6 +37,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
+    "use-immer": "^0.7.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
