--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@sanity/image-url": "^1.0.1",
     "@supabase/supabase-js": "^1.35.7",
     "@vercel/analytics": "^0.1.1",
+    "axios": "^1.6.0",
     "chart.js": "^3.8.2",
     "chartjs-adapter-date-fns": "^2.0.0",
     "classnames": "^2.3.1",
@@ -30,6 +31,7 @@
     "immer": "^9.0.15",
     "jsdom": "^20.0.0",
     "memory-cache": "^0.2.0",
+    "moment": "^2.29.4",
     "next": "^12.3.1",
     "next-sanity": "^0.6.0",
     "next-seo": "^5.5.0",
