--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
     "node-html-parser": "^5.3.3",
+    "notistack": "2.0.8",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
