chore(web): run the cron job once a day

--- a/web/vercel.json
+++ b/web/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/v1/db/cron/update-stats-cron",
-      "schedule": "*/10 * * * *"
+      "schedule": "30 5 * * *"
     }
   ]
 }
