--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "editor.formatOnSave": true,
   "eslint.workingDirectories": ["web", "cms"],
-  "cSpell.words": ["defensemen", "fhfhockey", "headshot", "plusminus"],
+  "cSpell.words": [
+    "defensemen",
+    "fhfhockey",
+    "headshot",
+    "Linemate",
+    "plusminus"
+  ]
 }
