--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,7 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "vitest"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -48,18 +47,17 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.53.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.3.1"
   }
 }
