--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
     "turbo": "latest",
-    "vercel": "^28.4.4"
+    "vercel": "^28.4.4",
+    "vitest": "^1.3.1"
   },
   "packageManager": "yarn@1.19.1"
 }
