--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -57,7 +58,6 @@
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0",
     "typescript": "4.7.4",
-    "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.3.1"
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
