major goalieChart update

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "turbo": "latest",
     "vercel": "^28.4.4"
   },
-  "packageManager": "yarn@1.19.1"
+  "packageManager": "yarn@1.19.1",
+  "dependencies": {
+    "chart.js": "^4.4.1"
+  }
 }
