--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "next-sanity": "^0.6.0",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
+    "next-usequerystate": "1.7.3",
     "node-html-parser": "^5.3.3",
     "notistack": "2.0.8",
     "react": "18.2.0",
