--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "vitest": "^1.3.1"
   },
   "packageManager": "yarn@1.19.1",
-  "dependencies": {}
+  "dependencies": {
+    "p5": "^1.9.2"
+  }
 }
