--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "packageManager": "yarn@1.19.1",
   "dependencies": {
+    "chartjs-plugin-datalabels": "^2.2.0",
     "p5": "^1.9.2"
   }
 }
