--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "packageManager": "yarn@1.19.1",
   "dependencies": {
     "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-zoom": "^2.0.1",
     "p5": "^1.9.2"
   }
 }
