--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "next-usequerystate": "1.7.3",
     "node-html-parser": "^5.3.3",
     "notistack": "2.0.8",
+    "puppeteer-core": "^22.6.2",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
