--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
@@ -24,6 +25,7 @@
   "dependencies": {
     "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "d3": "^7.9.0",
     "p5": "^1.9.2"
   }
 }
