--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "description": "The main web app for fhfhockey.com",
-
   "scripts": {
     "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
@@ -45,6 +44,7 @@
     "notistack": "2.0.8",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
     "use-immer": "^0.7.0",
     "yup": "^0.32.11"
