--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
-    "turbo": "latest",
+    "turbo": "1.3.1",
     "vercel": "^28.4.4",
     "vitest": "^1.3.1"
   },
