--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,9 @@
     "web#build": {
       "dependsOn": [
         "test",
-        "^build",
+        "^build"
+      ],
+      "env": [
         "$CMS_URL",
         "$NEXT_PUBLIC_SITE_URL",
         "$NEXT_PUBLIC_SANITY_PROJECT_ID",
@@ -26,7 +28,9 @@
     },
     "cms#build": {
       "dependsOn": [
-        "^build",
+        "^build"
+      ],
+      "env": [
         "$SANITY_STUDIO_API_PROJECT_ID",
         "$SANITY_STUDIO_API_DATASET"
       ],
