--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "tasks": {
+  "pipeline": {
     "test": {},
     "build": {
       "dependsOn": ["^build"],
@@ -9,30 +9,26 @@
     "web#build": {
       "dependsOn": [
         "test",
-        "^build"
-      ],
-      "env": [
-        "CMS_URL",
-        "NEXT_PUBLIC_SITE_URL",
-        "NEXT_PUBLIC_SANITY_PROJECT_ID",
-        "NEXT_PUBLIC_SANITY_DATASET",
-        "NEXT_PUBLIC_SANITY_GRAPHQL_URI",
-        "NEXT_PUBLIC_PROXY_SERVER_URL",
-        "NEXT_PUBLIC_SERVERLESS_API_URL",
-        "NEXT_PUBLIC_SUPABASE_URL",
-        "NEXT_PUBLIC_SUPABASE_PUBLIC_KEY",
-        "NEXT_SUPABASE_SERVICE_ROLE_KEY",
-        "SANITY_API_TOKEN"
+        "^build",
+        "$CMS_URL",
+        "$NEXT_PUBLIC_SITE_URL",
+        "$NEXT_PUBLIC_SANITY_PROJECT_ID",
+        "$NEXT_PUBLIC_SANITY_DATASET",
+        "$NEXT_PUBLIC_SANITY_GRAPHQL_URI",
+        "$NEXT_PUBLIC_PROXY_SERVER_URL",
+        "$NEXT_PUBLIC_SERVERLESS_API_URL",
+        "$NEXT_PUBLIC_SUPABASE_URL",
+        "$NEXT_PUBLIC_SUPABASE_PUBLIC_KEY",
+        "$NEXT_SUPABASE_SERVICE_ROLE_KEY",
+        "$SANITY_API_TOKEN"
       ],
       "outputs": [".next/**"]
     },
     "cms#build": {
       "dependsOn": [
-        "^build"
-      ],
-      "env": [
-        "SANITY_STUDIO_API_PROJECT_ID",
-        "SANITY_STUDIO_API_DATASET"
+        "^build",
+        "$SANITY_STUDIO_API_PROJECT_ID",
+        "$SANITY_STUDIO_API_DATASET"
       ],
       "outputs": ["dist/**"]
     },
@@ -42,5 +38,6 @@
     "dev": {
       "cache": false
     }
-  }
+  },
+  "baseBranch": "origin/master"
 }
