--- a/web/package.json
+++ b/web/package.json
@@ -21,10 +21,12 @@
     "@react-spring/web": "^9.5.5",
     "@sanity/image-url": "^1.0.1",
     "@supabase/supabase-js": "^2.39.2",
+    "@types/react": "^18.3.7",
     "@vercel/analytics": "^0.1.1",
     "axios": "^1.6.0",
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "cheerio": "^1.0.0",
     "classnames": "^2.3.1",
     "d3": "^7.8.5",
     "date-fns": "^2.29.1",
@@ -43,6 +45,7 @@
     "next-usequerystate": "1.7.3",
     "node-html-parser": "^5.3.3",
     "notistack": "2.0.8",
+    "rate-limiter-flexible": "^5.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^7.3.0",
@@ -54,7 +57,7 @@
     "@testing-library/react": "^14.2.1",
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
-    "@types/react": "18.0.15",
+    "@types/react": "^18.3.7",
     "@types/react-dom": "18.0.6",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.19.0",
