--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@react-spring/web": "^9.5.5",
     "@sanity/image-url": "^1.0.1",
     "@supabase/supabase-js": "^2.39.2",
+    "@tanstack/react-query": "^5.56.2",
     "@types/react": "^18.3.7",
     "@vercel/analytics": "^0.1.1",
     "axios": "^1.6.0",
