--- a/web/package.json
+++ b/web/package.json
@@ -54,7 +54,9 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
     "resize-observer-polyfill": "^1.5.1",
+    "retry": "^0.13.1",
     "use-immer": "^0.7.0",
+    "winston": "^3.14.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
