--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "d3": "^7.8.5",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
+    "framer-motion": "^11.13.3",
     "graphql": "^16.5.0",
     "html-to-image": "^1.10.8",
     "immer": "^9.0.15",
@@ -53,6 +54,8 @@
     "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
+    "react-flip-move": "^3.0.5",
+    "react-transition-group": "^4.4.5",
     "recharts": "^2.13.0",
     "resize-observer-polyfill": "^1.5.1",
     "retry": "^0.13.1",
