--- a/cms/package.json
+++ b/cms/package.json
@@ -7,29 +7,22 @@
   "author": "FHFHockey-dev <fhfhockey@outlook.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "sanity start --port=3002",
-    "build": "sanity build -y",
-    "test-build": "sanity build -y --no-minify"
+    "start": "sanity start",
+    "build": "sanity build",
+    "dev": "sanity dev"
   },
   "keywords": [
     "sanity",
     "cms"
   ],
   "dependencies": {
-    "@sanity/base": "^2.30.1",
-    "@sanity/core": "^2.30.2",
-    "@sanity/default-layout": "^2.30.1",
-    "@sanity/default-login": "^2.30.1",
-    "@sanity/desk-tool": "^2.30.1",
     "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.30.1",
+    "@sanity/vision": "^3.72.1",
     "eslint": "^8.6.0",
-    "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
-    "styled-components": "^5.2.0"
-  },
-  "devDependencies": {
-    "@sanity/cli": "^2.25.0"
+    "prop-types": "^15.8.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sanity": "^3.72.1",
+    "styled-components": "^6.1"
   }
 }
