--- a/web/package.json
+++ b/web/package.json
@@ -75,6 +75,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0",
+    "supabase": "^2.9.6",
     "typescript": "4.7.4",
     "vite-tsconfig-paths": "^4.3.1"
   }
