--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "description": "The main web app for fhfhockey.com",
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p 3000",
+    "dev": "next dev --turbopack -H 0.0.0.0 -p 3000",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint",
-    "test": "cross-env NODE_ENV=test vitest run",
-    "test:watch": "vitest"
+    "lint": "next lint"
+    
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -42,19 +41,20 @@
     "memory-cache": "^0.2.0",
     "ml-pca": "^4.1.1",
     "moment": "^2.29.4",
-    "next": "^12.3.1",
+    "next": "15.1.6",
     "next-sanity": "^0.6.0",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
     "next-usequerystate": "1.7.3",
     "node-html-parser": "^5.3.3",
     "notistack": "2.0.8",
+    "p-limit": "^6.2.0",
     "puppeteer-core": "22.13.1",
     "rate-limiter-flexible": "^5.0.3",
-    "react": "18.2.0",
-    "react-chartjs-2": "^4.3.1",
+    "react": "18.3.1",
+    "react-chartjs-2": "5.3.0",
     "react-datepicker": "^7.3.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-flip-move": "^3.0.5",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.13.0",
@@ -66,17 +66,22 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
+    "@types/d3": "^7.4.3",
     "@types/dotenv": "^8.2.3",
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
-    "@types/react": "^18.3.7",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0",
+    "eslint-config-next": "15.1.6",
     "sass": "^1.53.0",
     "supabase": "^2.9.6",
     "typescript": "4.7.4",
     "vite-tsconfig-paths": "^4.3.1"
+  },
+  "overrides": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
