--- a/web/package.json
+++ b/web/package.json
@@ -8,8 +8,9 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
-    
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -65,6 +66,14 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-essentials": "^8.5.3",
+    "@storybook/addon-interactions": "^8.5.3",
+    "@storybook/addon-onboarding": "^8.5.3",
+    "@storybook/blocks": "^8.5.3",
+    "@storybook/nextjs": "^8.5.3",
+    "@storybook/react": "^8.5.3",
+    "@storybook/test": "^8.5.3",
     "@testing-library/react": "^14.2.1",
     "@types/d3": "^7.4.3",
     "@types/dotenv": "^8.2.3",
@@ -75,8 +84,9 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.19.0",
     "eslint-config-next": "15.1.6",
+    "eslint-plugin-storybook": "^0.11.2",
     "sass": "^1.53.0",
-    "supabase": "^2.9.6",
+    "storybook": "^8.5.3",
     "typescript": "4.7.4",
     "vite-tsconfig-paths": "^4.3.1"
   },
