--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,6 @@
     "@sanity/image-url": "^1.0.1",
     "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.56.2",
-    "@types/react": "^18.3.7",
     "@vercel/analytics": "^0.1.1",
     "axios": "^1.6.0",
     "chart.js": "^4.4.2",
@@ -44,7 +43,7 @@
     "moment": "^2.29.4",
     "next": "15.1.6",
     "next-sanity": "^0.6.0",
-    "next-seo": "^5.5.0",
+    "next-seo": "^6.6.0",
     "next-sitemap": "^3.1.10",
     "next-usequerystate": "1.7.3",
     "node-html-parser": "^5.3.3",
@@ -52,10 +51,10 @@
     "p-limit": "^6.2.0",
     "puppeteer-core": "22.13.1",
     "rate-limiter-flexible": "^5.0.3",
-    "react": "18.3.1",
+    "react": "^19.0.0",
     "react-chartjs-2": "5.3.0",
     "react-datepicker": "^7.3.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^19.0.0",
     "react-flip-move": "^3.0.5",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.13.0",
@@ -79,8 +78,8 @@
     "@types/dotenv": "^8.2.3",
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.19.0",
     "eslint-config-next": "15.1.6",
@@ -89,9 +88,5 @@
     "storybook": "^8.5.3",
     "typescript": "5.7",
     "vite-tsconfig-paths": "^4.3.1"
-  },
-  "overrides": {
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3"
   }
 }
