--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,7 @@
     "chartjs-adapter-date-fns": "^2.0.0",
     "cheerio": "^1.0.0",
     "classnames": "^2.3.1",
-    "d3": "^7.8.5",
+    "d3": "^7.9.0",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
     "framer-motion": "^11.13.3",
@@ -46,15 +46,15 @@
     "next-seo": "^6.6.0",
     "next-sitemap": "^3.1.10",
     "next-usequerystate": "1.7.3",
-    "node-html-parser": "^5.3.3",
-    "notistack": "2.0.8",
+    "node-html-parser": "^5.4.2",
+    "notistack": "^2.0.8",
     "p-limit": "^6.2.0",
     "puppeteer-core": "22.13.1",
     "rate-limiter-flexible": "^5.0.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "5.3.0",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-flip-move": "^3.0.5",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.13.0",
@@ -78,8 +78,8 @@
     "@types/dotenv": "^8.2.3",
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.19.0",
     "eslint-config-next": "15.1.6",
