vercel fail v0.2 did: npm install next@latest eslint-plugin-next@latest --save-dev

--- a/web/package.json
+++ b/web/package.json
@@ -41,7 +41,6 @@
     "memory-cache": "^0.2.0",
     "ml-pca": "^4.1.1",
     "moment": "^2.29.4",
-    "next": "15.1.6",
     "next-sanity": "^0.6.0",
     "next-seo": "^6.6.0",
     "next-sitemap": "^3.1.10",
@@ -83,7 +82,9 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.19.0",
     "eslint-config-next": "15.1.6",
+    "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-storybook": "^0.11.2",
+    "next": "^15.1.6",
     "sass": "^1.53.0",
     "storybook": "^8.5.3",
     "typescript": "5.7",
