absolute path for run-fetch-wgo-details

--- a/web/package.json
+++ b/web/package.json
@@ -80,7 +80,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "8.19.0",
+    "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-storybook": "^0.11.2",
