--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "node-html-parser": "^5.4.2",
     "notistack": "^2.0.8",
     "p-limit": "^6.2.0",
+    "punycode": "^2.3.1",
     "puppeteer-core": "22.13.1",
     "rate-limiter-flexible": "^5.0.3",
     "react": "^18.3.1",
