--- a/web/package.json
+++ b/web/package.json
@@ -82,10 +82,9 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^9.20.0",
+    "eslint": "9.20.1",
     "eslint-config-next": "15.1.6",
-    "eslint-plugin-next": "^0.0.0",
-    "eslint-plugin-storybook": "^0.11.2",
+    "eslint-plugin-storybook": "^0.10.0",
     "next": "^15.1.6",
     "sass": "^1.53.0",
     "storybook": "^8.5.3",
