--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "node-fetch": "^2.7.0",
     "node-html-parser": "^5.4.2",
     "notistack": "^2.0.8",
+    "oauth-1.0a": "^2.2.6",
     "p-limit": "^6.2.0",
     "punycode": "^2.3.1",
     "puppeteer-core": "22.13.1",
@@ -64,6 +65,7 @@
     "retry": "^0.13.1",
     "use-immer": "^0.7.0",
     "winston": "^3.14.2",
+    "yahoo-fantasy": "^5.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -80,6 +82,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.2.1",
