--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,7 @@
     "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.56.2",
     "@vercel/analytics": "^0.1.1",
-    "axios": "^1.6.0",
+    "axios": "^1.8.3",
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^2.0.0",
     "cheerio": "^1.0.0",
@@ -40,6 +40,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jstat": "^1.9.6",
     "memory-cache": "^0.2.0",
+    "minimist": "^1.2.8",
     "ml-pca": "^4.1.1",
     "moment": "^2.29.4",
     "next-sanity": "^0.6.0",
