--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,8 @@
     "cheerio": "^1.0.0",
     "classnames": "^2.3.1",
     "d3": "^7.9.0",
-    "date-fns": "^2.29.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^11.13.3",
     "graphql": "^16.5.0",
