--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.8.3",
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "cheerio": "^1.0.0",
     "classnames": "^2.3.1",
     "d3": "^7.9.0",
@@ -35,6 +36,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^11.18.2",
     "graphql": "^16.5.0",
+    "hammerjs": "^2.0.8",
     "html-to-image": "^1.10.8",
     "immer": "^9.0.15",
     "jsdom": "^20.0.0",
