--- a/web/package.json
+++ b/web/package.json
@@ -25,8 +25,9 @@
     "@tanstack/react-query": "^5.56.2",
     "@vercel/analytics": "^0.1.1",
     "axios": "^1.8.3",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "cheerio": "^1.0.0",
     "classnames": "^2.3.1",
@@ -59,7 +60,7 @@
     "puppeteer-core": "22.13.1",
     "rate-limiter-flexible": "^5.0.3",
     "react": "^18.3.1",
-    "react-chartjs-2": "5.3.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-flip-move": "^3.0.5",
