--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@sanity/image-url": "^1.0.1",
     "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.56.2",
+    "@types/nodemailer": "^6.4.17",
     "@vercel/analytics": "^0.1.1",
     "axios": "^1.8.3",
     "chart.js": "^4.4.9",
@@ -53,6 +54,7 @@
     "next-usequerystate": "1.7.3",
     "node-fetch": "^2.7.0",
     "node-html-parser": "^5.4.2",
+    "nodemailer": "^7.0.0",
     "notistack": "^2.0.8",
     "oauth-1.0a": "^2.2.6",
     "p-limit": "^6.2.0",
