--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,10 @@
     "@sanity/image-url": "^1.0.1",
     "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-table": "^8.21.3",
+    "@types/formidable": "^3.4.5",
     "@types/nodemailer": "^6.4.17",
+    "@types/papaparse": "^5.3.15",
     "@vercel/analytics": "^0.1.1",
     "axios": "^1.8.3",
     "chart.js": "^4.4.9",
@@ -35,6 +38,7 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "formidable": "^3.5.4",
     "formik": "^2.2.9",
     "framer-motion": "^11.18.2",
     "graphql": "^16.5.0",
@@ -58,6 +62,7 @@
     "notistack": "^2.0.8",
     "oauth-1.0a": "^2.2.6",
     "p-limit": "^6.2.0",
+    "papaparse": "^5.5.2",
     "punycode": "^2.3.1",
     "puppeteer-core": "22.13.1",
     "rate-limiter-flexible": "^5.0.3",
@@ -65,6 +70,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-flip-move": "^3.0.5",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.13.0",
