--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@portabletext/react": "^1.0.6",
     "@react-spring/web": "^9.5.5",
     "@sanity/image-url": "^1.0.1",
+    "@sgratzl/chartjs-chart-boxplot": "^4.4.4",
     "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.21.3",
