--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "cheerio": "^1.0.0",
     "classnames": "^2.3.1",
     "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "formidable": "^3.5.4",
@@ -95,6 +96,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react": "^14.2.1",
     "@types/d3": "^7.4.3",
+    "@types/d3-hexbin": "^0.2.5",
     "@types/dotenv": "^8.2.3",
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
