--- a/web/package.json
+++ b/web/package.json
@@ -54,6 +54,7 @@
     "minimist": "^1.2.8",
     "ml-pca": "^4.1.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "next-sanity": "^0.6.0",
     "next-seo": "^6.6.0",
     "next-sitemap": "^3.1.10",
