--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.21.3",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "@types/formidable": "^3.4.5",
     "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.15",
