--- a/web/package.json
+++ b/web/package.json
@@ -105,7 +105,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "9.20.1",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-storybook": "^0.10.0",
     "next": "^15.1.6",
