--- a/web/package.json
+++ b/web/package.json
@@ -41,9 +41,11 @@
     "d3-hexbin": "^0.2.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^17.2.2",
     "formidable": "^3.5.4",
     "formik": "^2.4.6",
     "framer-motion": "^11.18.2",
+    "googleapis": "^159.0.0",
     "graphql": "^16.5.0",
     "hammerjs": "^2.0.8",
     "html-to-image": "^1.11.13",
@@ -114,6 +116,7 @@
     "next": "^15.1.6",
     "sass": "^1.53.0",
     "storybook": "^8.5.3",
+    "ts-node": "^10.9.2",
     "typescript": "5.7",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^3.0.7"
