--- a/web/package.json
+++ b/web/package.json
@@ -55,6 +55,7 @@
     "jstat": "^1.9.6",
     "memory-cache": "^0.2.0",
     "minimist": "^1.2.8",
+  "lz-string": "^1.5.0",
     "ml-pca": "^4.1.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.6.0",
