--- a/web/package.json
+++ b/web/package.json
@@ -53,9 +53,9 @@
     "jsdom": "^20.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "jstat": "^1.9.6",
+    "lz-string": "^1.5.0",
     "memory-cache": "^0.2.0",
     "minimist": "^1.2.8",
-  "lz-string": "^1.5.0",
     "ml-pca": "^4.1.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.6.0",
@@ -84,6 +84,7 @@
     "resend": "^4.5.0",
     "resize-observer-polyfill": "^1.5.1",
     "retry": "^0.13.1",
+    "swr": "^2.3.6",
     "use-immer": "^0.7.0",
     "winston": "^3.14.2",
     "yahoo-fantasy": "^5.3.0",
