--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,6 @@
     "mcp:supabase": "SUPABASE_ACCESS_TOKEN=$(grep SUPABASE_ACCESS_TOKEN .env.mcp | cut -d= -f2) npx @supabase/mcp-server-supabase"
   },
   "dependencies": {
-  "pg": "^8.11.5",
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -31,6 +30,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.15",
     "@vercel/analytics": "^0.1.1",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.3",
     "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^2.0.0",
@@ -71,6 +71,7 @@
     "oauth-1.0a": "^2.2.6",
     "p-limit": "^6.2.0",
     "papaparse": "^5.4.1",
+    "pg": "^8.11.5",
     "punycode": "^2.3.1",
     "puppeteer-core": "22.13.1",
     "rate-limiter-flexible": "^5.0.3",
@@ -92,7 +93,6 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-  "@types/pg": "^8.11.10",
     "@chromatic-com/storybook": "^3.2.4",
     "@storybook/addon-essentials": "^8.5.3",
     "@storybook/addon-interactions": "^8.5.3",
@@ -109,6 +109,7 @@
     "@types/jsdom": "^20.0.0",
     "@types/node": "18.0.2",
     "@types/node-fetch": "^2.6.12",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
