--- a/functions/vercel.json
+++ b/functions/vercel.json
@@ -1,9 +1,8 @@
 {
 	"version": 2,
 	"functions": {
-		"api/**/*.py": {
-			"runtime": "python3.11"
-		}
+            "api/**/*.py": { "runtime": "@vercel/python@3.9.0" }
+
 	},
 	"routes": [
 		{ "src": "/api/(.*)", "dest": "/api/$1" }
