--- a/functions/package.json
+++ b/functions/package.json
@@ -7,8 +7,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.1.2",
-    "cors-anywhere": "^0.4.4",
-    "vercel": "^48.1.6"
+    "cors-anywhere": "^0.4.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.14"
