--- a/functions/vercel.json
+++ b/functions/vercel.json
@@ -1,3 +1,13 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }]
+	"version": 2,
+		"functions": {
+			"api/**/*.py": {
+				"runtime": "python3.11"
+			}
+		},
+	"routes": [
+		{ "src": "^/sko/pipeline$", "dest": "/api/index.py" },
+		{ "src": "^/api/(.*)", "dest": "/api/$1" },
+		{ "src": "^(?!/api/).*", "dest": "/api/index.py" }
+	]
 }
