--- a/functions/vercel.json
+++ b/functions/vercel.json
@@ -1,15 +1,11 @@
 {
-	"version": 2,
-			"functions": {
-				"api/**/*.py": {
-					"runtime": "python3.11",
-					"maxDuration": 240,
-					"memory": 1024
-				}
-			},
-	"routes": [
-		{ "src": "^/sko/pipeline$", "dest": "/api/index.py" },
-		{ "src": "^/api/(.*)", "dest": "/api/$1" },
-		{ "src": "^(?!/api/).*", "dest": "/api/index.py" }
-	]
+  "version": 2,
+  "functions": {
+    "api/**/*.py": {
+      "runtime": "python3.11"
+    }
+  },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
