--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "The main web app for fhfhockey.com",
   "scripts": {
-    "dev": "next dev --turbopack -H 0.0.0.0 -p 3000",
+    "dev": "next dev -H 0.0.0.0 -p 3000",
+    "dev:turbo": "next dev --turbopack -H 0.0.0.0 -p 3000",
     "dev:3001": "next dev --turbopack -H 0.0.0.0 -p 3001",
     "build": "next build",
     "postbuild": "next-sitemap",
